# cplayer

./: .gitignore  CMakeLists.txt  YyvPlayer.c  fff.c  ffmpeg_tutorial_1.c  ffmpeg_tutorial_5.c  ffmpeg_tutorial_7.c  main.c
include/libavutil/: ffversion.h
lib/: libSDL2.dylib  libavdevice.dylib  libavfilter.dylib  libavformat.dylib  libavutil.dylib  libcurl.dylib  libmicrohttpd.dylib  libpostproc.dylib  libswresample.dylib  libswscale.dylib
src/: httpserver.c  httpserver.h  m3u8.c  m3u8.h  main.c
